methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:7: error: not found: value makecube
    makecube();
    ^MethodsPicture:16: error: not found: type color
def makeV(c:color){
            ^MethodsPicture:35: error: not found: value color
    makeV(color.yellow)
          ^MethodsPicture:43: error: not found: value color
    makeV(color.red)
          ^MethodsPicture:51: error: not found: value color
    makeV(color.blue)
          ^MethodsPicture:59: error: not found: value color
    makeV(color.green)
          ^