methods.picture.MethodsPicture.scala.code
override def run() {
  for (i <- 1 to 3){
    makeCube();
    forward(5);
    makeCube();
    forward(5);
    makecube();
    backward(10);
    left();
    forward(5);
    right();
    
  }
}

def makeV(c:color){
    left()
    forward()
    setBrushColor(c)
    backward()
    right()
    forward()
    setBrushColor(c)
    right()
    forward()
    setBrushColor(c)
    backward()
    left()
}

def makeCube(){
    forward()
    forward()
		left()
    makeV(color.yellow)
		right()
		forward()
		forward()
		left()
		forward()
    forward()
		left()
    makeV(color.red)
		right()
		forward()
		forward()
		left()
		forward()
    forward()
		left()
    makeV(color.blue)
		right()
		forward()
		forward()
		left()
		forward()
    forward()
		left()
    makeV(color.green)
		right()
		forward()
		forward()
		left()
}